<resources>
    <string name="app_name">BrickList</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_inventory">New Project</string>

    <string name="archived_message">Project %1$s was archived</string>
    <string name="archived_undo_action">Undo</string>

    <!-- List of parts -->
    <string name="title_activity_parts_list">List of parts</string>

    <string name="quantity_string">%1$d of %2$d</string>
    <string name="color_and_code_string">%1$s [%2$s]</string>
    <string name="brick_image_description">Image of lego brick</string>
    <string name="plus_button_description">Plus button, add 1 to found bricks</string>
    <string name="minus_button_description">Minus button, remove 1 from found bricks</string>

    <string name="sort_none_title">Reset sort</string>
    <string name="sort_item_title">Sort by brick type</string>
    <string name="sort_color_title">Sort by color</string>

    <!-- Export -->
    <string name="action_export">Export to XML (Wanted List)</string>
    <string name="export_chooser_title">Export XML (Wanted List) to:</string>
    <string name="export_no_application">No application to handle export</string>
    <string name="export_uri_label">XML - BrickLink Wanted List</string>

    <!-- New inventory -->
    <string name="set_number_hint">Set number</string>
    <string name="name_hint">Name</string>
    <string name="add_button_text">Add</string>

    <string name="add_in_progress">Adding project in progress</string>
    <string name="add_wrong_url">Set with this number does not exist</string>
    <string name="add_network_error">Couldn\'t download the project</string>
    <string name="add_success">New project was created</string>
    <string name="add_already_in_progress">Operation is already in progress</string>
    <string name="add_bricks_not_found">Some bricks were not found:</string>
    <string name="add_bricks_not_found_others">And %1$d others</string>

    <!-- Preferences -->
    <string name="title_activity_settings">Settings</string>
    <string name="general_header">General</string>

    <string name="url_prefix_title">URL prefix</string>
    <string name="archived_title">Archived</string>
    <string name="archived_summary_on">Show archived</string>
    <string name="archived_summary_off">Do not show archived</string>
    <string name="condition_title">Condition</string>
</resources>
