<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/general_header">

        <EditTextPreference
            android:defaultValue="http://fcds.cs.put.poznan.pl/MyWeb/BL/"
            android:key="url_prefix"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/url_prefix_title"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="archived"
            android:summaryOff="@string/archived_summary_off"
            android:summaryOn="@string/archived_summary_on"
            android:title="@string/archived_title" />
        <ListPreference
            android:defaultValue="not_important"
            android:entries="@array/condition_entries"
            android:entryValues="@array/condition_values"
            android:key="condition"
            android:title="@string/condition_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
